# esp-playground

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: dma.rs  lib.rs  pid.rs  sensor.rs
src/display/: mod.rs  st7701.rs
src/motor/: foc.rs  mod.rs  open_loop.rs
src/util/: mod.rs  sampling.rs  velocity.rs
ui/: main.slint
